Updated users.js with file uploading (needs work)
