# api/controllers/users.js
@@ -5,14 +5,29 @@
 'use strict';
 
 var User = require('../../models/user');
+var imgage = require('../../models/img');
 var _ = require('lodash');
+var multer = require('multer');
+var upload = multer({dest: './uploads/'});
+var formidable = require("formidable");
+var fs = require('fs');
+var grid = require("gridfs-stream");
+var random = require("random-js")();
+var mongoose = require("mongoose");
+var conn = mongoose.connection;
+
+
+
+var connection = [];
 
 module.exports = {
     index: index,
     create: create,
     show: show,
     update: update,
-    destroy: destroy
+    destroy: destroy,
+    postImage: postImage,
+    getImage: getImage
 };
 
 //get all users in the database
@@ -42,7 +57,6 @@ function create(req,res){
              res.status(500).json(err).end();
              return;
          }
-
         res.json({
             message: 'User Created',
             user: _user
@@ -53,6 +67,8 @@ function create(req,res){
 //get a single user
 function show(req,res){
     User.findById(req.swagger.params.userId.value, function(err, user){
+
+
         if(err){
             res.status(500).json(err).end();
             return;
@@ -78,7 +94,7 @@ function update(req,res){
                 return;
             }
             res.json({
-                message: 'The following movie has been updated',
+                message: 'The following user has been updated',
                 user: user
             }).end();
         })
@@ -99,22 +115,75 @@ function destroy(req,res){
     })
 }
 
-function indexPets(req,res){
+function postImage(req,res){
 
-    User.find(_.omitBy({
-        firstName: req.swagger.params.firstName.value
-    }, function (value) {
-        return _.isNull(value) || _.isUndefined(value);
+    var supported_mimes = [
+        'image/png',
+        'image/jpeg',
+        'image/gif'
+    ];
+    var file = req.swagger.params.file.value;
+    //console.log(file);
 
-    }), function (err, users) {
-        if(err){
-            res.status(500).json(err).end();
+    if (supported_mimes.indexOf(file.mimetype) === -1) {
+        var err = {
+            message: 'File type not supported for uploads'
+        };
+        return res.json(err);
+    }
+    var data = {
+        'id': file.originalname,
+        'field': file.fieldname,
+        'destination': file.destination,
+        'size': file.size,
+        'type': file.mimetype,
+        'encoding': file.encoding
+    };
+    console.log(data);
+    var path = 'uploads/';
+    var _id = random.integer(1, 100000000000);
+    fs.writeFile(path + file.originalname, file.buffer , function (err) {
+        if (err) {
+            return res.json({message: 'File not uploaded'});
         }
-        console.log(users);
-        res.json({
-            users: users.pet
-        }).end();
+        else
+        User.findById(req.swagger.params.userId.value, function(err, user){
+
+            fs.readFile('uploads/'+ file.originalname, function(err, img){
+                if(err){
+                    res.json({err: err});
+                }
+                else
+                    //creating a image schema.
+                    var image = new imgage();
+                    image.photo.data = img;
+                    console.log(image.photo.data);
+                    image.save();
+
+                    //assign the image to the pet
+                    _.assign(user.pet, {photo: Buffer});
+                    user.pet.photo = img;
+                    console.log(user.pet.photo);
+
+                    user.save(function(err){
+                        if(err){
+                        res.status(500).json(err).end();
+                        return;
+                        }
+                        res.json({
+                            message: user
+                        }).end();
+                    });
+           })
+        });
     });
-
-
+}
+function getImage(req,res){
+    User.findById(req.swagger.params.userId.value, function(err, user) {
+        if(err){
+            res.json({err:err});
+        }
+        else
+            res.json({photo: user.pet.photo})
+    })
 }
